mdmCeneveo/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>lco1__Activity_Monitor__c</fullName>
        <formula>IF
(ISNULL(LastActivityDate),
IMAGE(&quot;/img/samples/flag_red.gif &quot;, &quot;NO ACTIVITIES&quot;),
IF(lco1__Days_Since_Last_Activity__c &lt;15,
IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Less than 15&quot;) ,
IF(lco1__Days_Since_Last_Activity__c&lt; 30,
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;15 to 30&quot;),
IF(lco1__Days_Since_Last_Activity__c&lt; 45,
IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;31 to 45&quot;) ,
IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;More than 45 Days&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green Flag = Last Activity &lt;15 days 
Yellow Flag = Last Activity between 15 and 30 days 
Red Flag = Last Activity &gt;30</inlineHelpText>
        <label>PAM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lco1__Amount_at_Risk__c</fullName>
        <label>Risk ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lco1__At_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lco1__Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lco1__Days_Since_Last_Activity__c</fullName>
        <formula>today() -  LastActivityDate</formula>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lco1__Has_Upside__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Upside</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lco1__Upside_Amount__c</fullName>
        <label>Upside ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Open_Activities__c</fullName>
        <label># of Open Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>oo__OpportunityOptimizerChange__c</fullName>
        <description>This field is included with Sales Optimizer - Opportunity to allow validation rules to be coded to allow inserts by the PowerChart.</description>
        <label>OpportunityOptimizerChange</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>oo__Reputation__c</fullName>
        <description>This field is included with the Sales Optimizer - Opportunity application and is used to track the reputation of an Account.</description>
        <inlineHelpText>Enter a description of this Account&apos;s reputation in the marketplace.</inlineHelpText>
        <label>Reputation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>oo__Strategy__c</fullName>
        <description>This field is included with the Sales Optimizer - Opportunity application and is used to track the general go to market strategy of an Account.</description>
        <inlineHelpText>Enter a description of the general go to market strategy of this Account.</inlineHelpText>
        <label>Strategy</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>oo__Strengths__c</fullName>
        <description>This field is included with the Sales Optimizer - Opportunity application and is used to track the strengths of an Account.</description>
        <inlineHelpText>Enter a description of the general strengths of this Account.</inlineHelpText>
        <label>Strengths</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>oo__Weaknesses__c</fullName>
        <description>This field is included with the Sales Optimizer - Opportunity application and is used to track the weaknesses and competitive disadvantages of an Account.</description>
        <inlineHelpText>Enter a description of the weaknesses and competitive disadvantages of this Account.</inlineHelpText>
        <label>Weaknesses</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>A1_My_Active_Accounts</fullName>
        <columns>Acct_Segmentation__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Activity_Monitor__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Current_Year_Budget__c</columns>
        <columns>Current_YTD_Sales__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Active_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>A1 - My Active Accounts</label>
    </listViews>
    <listViews>
        <fullName>A2_My_Accounts</fullName>
        <columns>Acct_Segmentation__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Activity_Monitor__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Active_Account__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Acct_Segmentation__c</field>
            <operation>equals</operation>
        </filters>
        <label>A2 - My Unsegmented Accounts</label>
    </listViews>
    <listViews>
        <fullName>Acclaim_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Group Accounts</label>
        <sharedTo>
            <roleAndSubordinates>Acclaim_Mgmt</roleAndSubordinates>
            <roleAndSubordinates>Acclaim_Sales_Rep</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounts_with_Sales_Volume_Rep</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Prior_Year_Sales__c</columns>
        <columns>Current_YTD_Sales__c</columns>
        <columns>Current_YTD_Budget__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <filters>
            <field>X2013_Sales__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>X2012_Sales__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Plant__c</field>
            <operation>equals</operation>
            <value>Envelope Finance</value>
        </filters>
        <label>A3 - YTD Sales vs Budg vs PY</label>
    </listViews>
    <listViews>
        <fullName>All_Accounts_Main</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Account_Number__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Active_Account__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>Activity_Monitor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer,Prospect</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_My_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Activity_Monitor__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>All My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Co_Packers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Co-Packer</value>
        </filters>
        <label>Co-Packers</label>
    </listViews>
    <listViews>
        <fullName>Competitors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Sub_Industry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filters>
        <label>Competitors</label>
    </listViews>
    <listViews>
        <fullName>Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Billing_Account_Number__c</columns>
        <columns>X2014_Sales__c</columns>
        <columns>Current_Year_Budget__c</columns>
        <columns>Current_YTD_Budget__c</columns>
        <columns>Current_YTD_Sales__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <label>Customers</label>
    </listViews>
    <listViews>
        <fullName>Ed_Mazur_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Newsham</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <label>Rep Accounts</label>
        <sharedTo>
            <group>EM_Account_Sharing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Envelope_Customer_View</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Billing_Account_Number__c</columns>
        <columns>Current_YTD_Sales__c</columns>
        <columns>Prior_YTD_Sales__c</columns>
        <columns>Current_YTD_Budget__c</columns>
        <columns>X2013_Sales__c</columns>
        <columns>X2012_Sales__c</columns>
        <columns>X2011_Sales__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plant__c</field>
            <operation>equals</operation>
            <value>Envelope Plants - Finance Only</value>
        </filters>
        <label>Envelope Customer View</label>
        <sharedTo>
            <group>Cenveo_Corporate_and_LP_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Equipment_Suppliers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Equipment Supplier</value>
        </filters>
        <label>Equipment Suppliers</label>
    </listViews>
    <listViews>
        <fullName>Loss_Prevention</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Activity_Monitor__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Loss_Prevention__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Loss Prevention</label>
    </listViews>
    <listViews>
        <fullName>My_Customer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Current_YTD_Sales__c</columns>
        <columns>Current_YTD_Budget__c</columns>
        <columns>X2012_Sales__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Customer Accounts</label>
    </listViews>
    <listViews>
        <fullName>Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Sub_Industry__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <label>Prospects</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_Owner_Rule</fullName>
        <active>true</active>
        <description>Only System Admin Can change account ownership</description>
        <errorConditionFormula>AND(
 
ISCHANGED(OwnerId),
 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
        <errorMessage>Change in Account Ownership is restricted to Salesforce Administrators. Please log a case to have the Owner of this account modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_be_Customer</fullName>
        <active>false</active>
        <errorConditionFormula>AND (
      ISPICKVAL( Type , &quot;Customer&quot;),
      OR( ISBLANK( X2011_Sales__c ),
           X2011_Sales__c = 0),
      OR( ISBLANK( X2012_Sales__c ),
           X2012_Sales__c = 0),
      OR( ISBLANK( X2013_Sales__c ),
           X2013_Sales__c = 0),
      TEXT( Credit_Application__c) &lt;&gt; &quot;Approved&quot;)</errorConditionFormula>
        <errorMessage>An Account can only be a &quot;Customer&quot; if there is past sales data or if the credit application is set to &quot;Approved&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_Term_Rep_Required</fullName>
        <active>true</active>
        <description>If Picklist value for Credit Application=Approved, Credit Term and Credit Rep are required</description>
        <errorConditionFormula>AND(
      ISPICKVAL( Credit_Application__c , &quot;Approved&quot;) ,
  OR(
       ISBLANK( Credit_Rep_UserLookup__c ) ,
       ISBLANK( TEXT( Credit_Terms__c  ) )
         )
    )</errorConditionFormula>
        <errorDisplayField>Credit_Application__c</errorDisplayField>
        <errorMessage>Credit Terms and Credit Rep required when Credit Application is Approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Account_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR($Profile.Name = &apos;Cenveo Sales Rep&apos;, $Profile.Name = &apos;Cenveo Sales Rep&apos;), OR( ISNEW(), ISCHANGED(Type )), ISPICKVAL(Type , &apos;Customer&apos;) )</errorConditionFormula>
        <errorDisplayField>Type</errorDisplayField>
        <errorMessage>You do not have permission to create &apos;Customer&apos; Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Test_Account</fullName>
        <active>false</active>
        <errorConditionFormula>true</errorConditionFormula>
        <errorMessage>Insert Fail</errorMessage>
    </validationRules>
</CustomObject>